DSS-1312 : allows to use PKCS11 with JDK 9-10