@@ -1,8 +1,7 @@
 package eu.europa.esig.dss.token;
 
+import java.util.Base64;
 import java.util.List;
-
-import javax.xml.bind.DatatypeConverter;
 
 import eu.europa.esig.dss.DigestAlgorithm;
 import eu.europa.esig.dss.SignatureValue;
@@ -22,7 +21,7 @@ public class MSCAPISignatureTokenApp {
 			ToBeSigned toBeSigned = new ToBeSigned("Hello world".getBytes());
 			SignatureValue signatureValue = token.sign(toBeSigned, DigestAlgorithm.SHA256, keys.get(0));
 
-			System.out.println("Signature value : " + DatatypeConverter.printBase64Binary(signatureValue.getValue()));
+			System.out.println("Signature value : " + Base64.getEncoder().encodeToString(signatureValue.getValue()));
 		}
 	}
 
